--- a/omniFORM.xcodeproj/xcshareddata/xcschemes/omniFORM Debug.xcscheme
+++ b/omniFORM.xcodeproj/xcshareddata/xcschemes/omniFORM Debug.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "omniFORM.app"
+               BuildableName = "omniFORMDebug.app"
                BlueprintName = "omniFORM"
                ReferencedContainer = "container:omniFORM.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "omniFORM.app"
+            BuildableName = "omniFORMDebug.app"
             BlueprintName = "omniFORM"
             ReferencedContainer = "container:omniFORM.xcodeproj">
          </BuildableReference>
@@ -53,7 +53,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "omniFORM.app"
+            BuildableName = "omniFORMDebug.app"
             BlueprintName = "omniFORM"
             ReferencedContainer = "container:omniFORM.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "omniFORM.app"
+            BuildableName = "omniFORMDebug.app"
             BlueprintName = "omniFORM"
             ReferencedContainer = "container:omniFORM.xcodeproj">
          </BuildableReference>
